Fixes alignment issues removing margins and moving to flex/grid

--- a/src/modules/dashboard/components/ColonyTotalFunds/ColonyTotalFunds.css
+++ b/src/modules/dashboard/components/ColonyTotalFunds/ColonyTotalFunds.css
@@ -36,10 +36,13 @@
 }
 
 .totalBalanceCopy {
+  display: flex;
+  align-items: center;
   margin-top: 12px;
   font-size: var(--size-small);
   font-weight: var(--weight-bold);
   color: var(--temp-grey-blue-7);
+  gap: 15px;
 }
 
 .totalBalanceCopy button {
@@ -51,20 +54,14 @@
 }
 
 .rightArrowDisplay {
-  display: inline-block;
-  margin: -11px 3px -3px 15px;
-  vertical-align: middle;
+  display: contents;
+
+  /* // margin: -11px 3px -3px 15px; */
+
+  /* vertical-align: middle; */
   font-size: var(--size-medium);
   font-weight: var(--weight-bold);
   color: var(--colony-blue);
-}
-
-@media only screen and (-webkit-min-device-pixel-ratio: 2),
-  only screen and (min-resolution: 192dpi),
-  only screen and (min-resolution: 2dppx) {
-  .rightArrowDisplay {
-    margin: -11px 3px -6px 15px;
-  }
 }
 
 .caretIcon {
